# iggy_embedded

./: .gitignore  Cargo.toml  LICENSE  README.md  build_documentation.md  cfg.toml.example  docker-compose.yml
.cargo/: config.toml
src/: client.rs  lib.rs
src/command/: get_me.rs  login_user.rs  mod.rs  ping.rs
