[package]
edition = "2021"
name = "iggy-embedded"
version = "0.0.1"

[[bin]]
name = "esp32"
path = "./src/bin/main.rs"

[dependencies]
bytes = { version = "1.10.0", default-features = false }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-20480",
  "log",
] }
embassy-net = { version = "0.6.0", features = ["dhcpv4", "tcp", "log"] }
embassy-sync = { version = "0.6.2", features = ["log"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8", "log"] }
esp-alloc = { version = "0.7.0", default-features = false }
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", default-features = false, features = [
  "esp32",
  "log",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", default-features = false, features = [
  "esp32",
  "executors",
  "log",
] }
esp-println = { version = "0.13.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.13.0", default-features = false, features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "log",
  "wifi",
  "smoltcp",
] }
log = "0.4"
static_cell = "2.1.0"
toml-cfg = "0.2.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.release.package.esp-wifi]
opt-level = 3
